# winterfell-stark-poc

./: Cargo.toml  README.md  nft.db
benches/: bench_mint.rs
src/: account.rs  main.rs  merkle_proof.rs  merkle_proof_smt.rs  mint.rs  winter_merkle.rs
src/merkle_proof/: merkle_tree.rs
src/merkle_proof/merkle_tree/: utils.rs
src/winter_merkle/: air.rs  prover.rs  rescue.rs
