[package]
name = "winterfell-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winterfell = "0.3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rusqlite = "0.26.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
rust-crypto = "^0.2"
rustc-serialize = "0.3"
bincode = "*"
sparse-merkle-tree = "0.5.3"
blake2b-rs = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_mint"
harness = false
